assets/scss/partials/_modal-popular-search.scss
.modal-popular-search {
    width: 100%;
    position: fixed;
    top: $height-nav;
    overflow-y: auto;
    z-index: $z-index-modal;
    height: calc(100vh - #{$height-nav});
    backdrop-filter: blur(30px);
    background-color: rgba($white, 0.7);

    @include breakpoint(medium down){
        top: calc(#{$height-nav-medium} + 1px);
        height: calc(100vh - #{$height-nav-medium});
    }

    .modal-content {
        padding: 0;
        min-height: 100%;
        position: relative;
        box-shadow: 0 3px 6px rgba($black, 0.16);

        .close-button {
            top: 52px;
            right: 44px;
            cursor: pointer;
            position: absolute;
            z-index: $z-index-2;
        }

        .modal-body {
            padding: 120px 170px 120px 120px;

            @include breakpoint(medium down) {
                padding: 70px 45px;
            }

            .input-group {

                .icon {
                    margin-right: 20px;

                    @include breakpoint(medium down) {
                        margin-right: 0;

                        svg {
                            width: 22px;
                        }
                    }
                }

                @include breakpoint(medium down) {
                    border-bottom: 1px solid $dark-blue-1;
                }

                .input-search {
                    width: 100%;
                    border: none;
                    box-shadow: none;
                    padding: 0 45px 0 30px;
                    background-color: transparent;
                    border-bottom: 1px solid $dark-blue-1;

                    @include breakpoint(medium down) {
                        border: none;
                        padding: 10px 20px 10px 20px;
                    }

                    &:active,
                    &:focus {
                        outline: none;
                    }
                }
            }

            .list-popular-search {
                padding-left: 70px;

                @include breakpoint(medium down) {
                    padding-left: 0;
                }
            }

            .list-quick-links {
                @include breakpoint(medium down) {
                    margin-top: 35px;
                }
            }

            .title {
                line-height: 1.4;
                font-size: 4.5rem;
                font-weight: $light;

                @include breakpoint(medium down) {
                    font-weight: $regular;
                    font-size: 1.4rem;
                }

            }

            .lists {
                margin-top: 115px;

                @include breakpoint(medium down) {
                    margin-top: 46px;
                }

                .list {
                    padding: 0;
                    margin-top: 35px;
                    list-style-type: none;

                    @include breakpoint(medium down) {
                        margin-top: 20px;
                        padding-left: 22px;
                    }

                    li {
                        font-size: 1.4rem;
                        font-weight: $bold;

                        @include breakpoint(medium down) {
                            font-weight: $semi-bold;
                            text-transform: lowercase;
                        }

                        &:not(:first-child) {
                            margin-top: 15px;
                        }
                    }
                }
            }
        }
    }
}

